# ConfusableMatcher-js-interop

./: .clang-format  .cspell.json  .dockerignore  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .huskyrc.js  .prettierignore  .prettierrc.js  .yarnclean  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  binding.gyp  docker-compose.yaml  index.js  jest.config.js  package-lock.json  package.json  profile.sh  tsconfig.base.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-alpine.yaml  build-linux.yaml  build-macos.yaml  build-windows.yaml  build.yaml  cspell.yaml  format.yaml  lint.yaml  prettier.yaml  publish.yaml  spelling.yaml
scripts/: prebuild.sh
scripts/prebuild.d/: gyp-build.sh
src/: benchmark.ts  binding.spec.ts  binding.ts  index.ts  indexOfAsyncWorker.cpp  indexOfAsyncWorker.h  indexOfDebugFailuresAsyncWorker.cpp  indexOfDebugFailuresAsyncWorker.h  interop.cpp  interop.h  wrapper.spec.ts  wrapper.ts
src/benchmark/: bench.ts  index.ts  options.ts  parser.ts
src/benchmark/benchs/: indexOf.ts  indexOfAsync.ts  indexOfDebugFailures.ts  indexOfDebugFailuresEx.ts  indexOfDebugFailuresExSync.ts  indexOfDebugFailuresSync.ts  indexOfStrPosPointers.ts  indexOfSync.ts  indexOfSyncStrPosPointers.ts
src/benchmark/perf/: loop-latency.ts  microtasks.ts
src/e2e/simp/: cases.ts  ignores.ts  index.spec.ts  maps.ts
src/e2e/unicode/: index.spec.ts
src/examples/: zebra.ts
src/examples/pool/: cluster.ts  worker.js
src/fuzzer/: fuzzer.ts  index.ts
test/: test.js
